arreglo tests con nueva implementacion